Fix search hash - #label - set a max-height to search result - show scorllbar if overflow

--- a/trello_lite/public/stylesheets/style.styl
+++ b/trello_lite/public/stylesheets/style.styl
@@ -52,12 +52,14 @@ basics()
 .search-result
   position: absolute
   width: 600px
+  max-height: 95%
   top: 40px
   left: 5px
   border-radius: 3px
   box-shadow: 0 0 6px rgba(0,0,0,0.4)
   background: #edeff0
   padding: 10px
+  overflow: auto
   z-index: 30
   h2
     margin: 10px 0
